fix spacing between articles on index page

--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -1,3 +1,7 @@
 body {
 	margin: 30px auto 75px;
 }
+
+article {
+	margin-bottom: 75px;
+}
